--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<!-- <section class="hero">
+<section class="hero">
   <div class="hero__block container">
     <h1 class="setion__titel animate__animated animate__backInLeft">
       <span class="hero___titel--white"
@@ -82,4 +82,4 @@
       />
     </picture>
   </div>
-</section> -->
+</section>
