--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,9 +13,10 @@
 в связи с этим у таблетной и десктопной версии ==background-color: transparent==
 для того чтобы было видно фоновое изображение от hero  -->
 
-<div class="hero">
-  <div class="container">
+<!-- <div class="hero"> -->
+  
     <header class="header">
+     
       <div class="header__container">
         <!-- =========лого========== -->
         <span class="logo">
@@ -110,8 +111,9 @@
 
         <!-- ======================================= -->
       </div>
-      <!-- </div> -->
+      
+   
     </header>
-  </div>
-</div>
+  
+
 <!-- ====================== -->
