--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,6 +1,3 @@
-// .hero {
-//   position: relative;
-// }
 
 .header {
   background-color: transparent;
@@ -29,149 +26,31 @@
   margin-right: 18px;
 }
 
-// оверлей
 
-// .overlay {
-//   margin-left: auto;
-//   margin-right: auto;
-
-//   background-image: linear-gradient(
-//       to right,
-//       rgba(47, 48, 58, 0.4),
-//       rgba(47, 48, 58, 0.4)
-//     ),
-//     url(../images/About/about-background-desktop.png);
-//   background-position: center;
-//   background-size: cover;
-//   background-repeat: no-repeat;
-
-//   @media screen and (min-device-pixel-ratio: 2),
-//     screen and (min-resolution: 192dpi),
-//     screen and (min-resolution: 2dppx) {
-//     background-image: linear-gradient(
-//         to right,
-//         rgba(47, 48, 58, 0.4),
-//         rgba(47, 48, 58, 0.4)
-//       ),
-//       url(../images/About/about-background-desktop@2x.png);
-//     background-position: center;
-//     background-size: cover;
-//     background-repeat: no-repeat;
-//   }
-
-//   @media screen and (min-width: 768px) {
-//     background-image: linear-gradient(
-//         to right,
-//         rgba(47, 48, 58, 0.4),
-//         rgba(47, 48, 58, 0.4)
-//       ),
-//       url(../images/About/about-background-desktop.png);
-//     background-position: center;
-//     background-size: cover;
-//     background-repeat: no-repeat;
-
-//     @media screen and (min-device-pixel-ratio: 2),
-//       screen and (min-resolution: 192dpi),
-//       screen and (min-resolution: 2dppx) {
-//       background-image: linear-gradient(
-//           to right,
-//           rgba(47, 48, 58, 0.4),
-//           rgba(47, 48, 58, 0.4)
-//         ),
-//         url(../images/About/about-background-desktop@2x.png);
-//       background-position: center;
-//       background-size: cover;
-//       background-repeat: no-repeat;
-//     }
-//   }
-
-//   @media screen and (min-width: 1200px) {
-//     background-image: linear-gradient(
-//         to right,
-//         rgba(47, 48, 58, 0.4),
-//         rgba(47, 48, 58, 0.4)
-//       ),
-//       url(../images/About/about-background-mobile.png);
-//     background-position: center;
-//     background-size: cover;
-//     background-repeat: no-repeat;
-
-//     @media screen and (min-device-pixel-ratio: 2),
-//       screen and (min-resolution: 192dpi),
-//       screen and (min-resolution: 2dppx) {
-//       background-image: linear-gradient(
-//           to right,
-//           rgba(47, 48, 58, 0.4),
-//           rgba(47, 48, 58, 0.4)
-//         ),
-//         url(../images/About/about-background-mobile@2x.png);
-//       background-position: center;
-//       background-size: cover;
-//       background-repeat: no-repeat;
-//     }
-//   }
-// }
-
-// .backdrop {
-//   position: fixed;
-
-//   width: 100vw;
-//   height: 100vh;
-//   z-index: 1;
-
-//   overflow-y: scroll;
-
-//   background-image: linear-gradient(
-//     to right,
-//     rgba(238, 174, 202, 0.8) ,
-//     rgba(178, 181, 184, 0.6)
-//   );
-
-//   opacity: 1;
-//   visibility: visible;
-
-//   transition: visibility 400ms cubic-bezier(0.4, 0, 0.2, 1),
-//     opacity 400ms cubic-bezier(0.4, 0, 0.2, 1);
-
-//   &--is-hidden {
-//     visibility: hidden;
-//     pointer-events: none;
-//     opacity: 0;
-//     // position: absolute;
-//     //   top: 50%;
-//     //   left: 50%;
-//     //   transform: translate(-50%, -50%);
-
-//   }
-
-//   // @media screen and (max-width: 767px) {
-//   //   padding: 15px 15px;
-//   // }
-
-// }
 
 // мобильное меню
 
 .mobile-menu {
-  // display: none;
-  background-color: var(--mobile-menu-bgc);
-  // position: fixed;
-  padding: 48px 15px;
+  
+  position: fixed;
   top: 0;
   right: 0;
   z-index: 1;
+  padding: 48px 15px;
+
   height: 100vh;
   width: 100%;
 
+  visibility:hidden;
   transform: translateX(100%);
   transition: 0.5s;
-  position: fixed;
+   
+  background-color: var(--mobile-menu-bgc);
 
   @media screen and (min-width: 320px) {
     width: 250px;
     padding: 48px 20px;
 
-    // transform: translatex(100%);
   }
 
   @media screen and (min-width: $tablet) {
@@ -183,36 +62,17 @@
   @media screen and (min-width: $desktop) {
     display: flex;
     position: static;
+    transform: translateX(0);
+
     background-color: yellowgreen;
     padding: 0;
     width: auto;
     height: auto;
+    visibility: visible;
     margin-left: auto;
+    margin-right: auto;
   }
 
-  // &--is-open {
-  //   overflow: hidden;
-  //   position: absolute;
-  //   top:    0;
-  //   right:  0;
-
-  //   display: block;
-  //   padding: 48px 15px;
-
-  //   width:  100%;
-  //   height: 100vh;
-  //   // transform: translatex(100%);
-
-  //   transition-property: transform;
-  //   transition-duration: 250ms;
-  //   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-  //   @media screen and (min-width: 320px) {
-  //     width: 250px;
-  //     padding: 48px 20px;
-  // }
-
-  // }
 }
 
 // body.mobile-menu--is-open {
@@ -226,10 +86,11 @@
   display: block;
   transform: translateX(0);
   transition: 0.5s;
-  @media screen and (min-width: $desktop) {
-    display: none;
-  }
-}
+  visibility: visible;
+
+ }
+
+
 @media screen and (min-width: $desktop) {
   .site-nav {
     display: block;
@@ -244,7 +105,7 @@
   }
 }
 
-// кнопка купить для хедера
+// кнопка купить для хедера=============
 .header__button {
   display: none;
   margin-right: 0;
@@ -259,9 +120,9 @@
     order: 2;
   }
 }
-//  кнопка купить для хедера end
+//  кнопка купить для хедера end========
 
-// ====кнопка купить для моб меню
+// ====кнопка купить для моб меню============
 .mobile-menu__button {
   margin-left: auto;
   margin-right: auto;
@@ -286,7 +147,7 @@
 }
 // =======кнопка купить для моб меню end
 
-// переключатель мобильного меню
+// переключатель мобильного меню=============
 
 .mobile-menu__switch {
   padding: 0;
@@ -308,8 +169,8 @@
 }
 
 .mobile-menu__icon-cross {
-  //  fill: var(--main-bgc);
-  fill: black;
+   fill: var(--main-bgc);
+  
 }
 .mobile-menu__icon-burger {
   fill: var(--accent-color);
@@ -321,8 +182,8 @@
 .mobile-menu--is-open .mobile-menu__switch--close {
   display: block;
   position: absolute;
-  top: 28px;
-  right: 23px;
+  top: 23px;
+  right: 28px;
   z-index: 1;
 }
 
@@ -388,4 +249,4 @@
     font-size: 16px;
   }
 }
-// --accent-color: #d41443;====================
+
