Оформление модального окна

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -57,7 +57,9 @@
 
     <ul class="contacts-button">
       <li class="contacts-button__item">
-        <button type="button" class="button button--pink contacts__button">Our Locations</button>
+        <button type="button" class="button button--pink contacts__button" data-contact-modal-open>
+          Our Locations
+        </button>
       </li>
       <li class="contacts-button__item">
         <button type="button" class="button button--white contacts__button">Franchise</button>
