--- a/src/sass/utils/_base.scss
+++ b/src/sass/utils/_base.scss
@@ -2,6 +2,10 @@ body {
   background-color: #ffffff;
   font-family: 'DM Sans', sans-serif;
   letter-spacing: 0.04em;
+
+  &.contact-modal-open {
+    overflow: hidden;
+  }
 }
 
 h1,
