--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,3 +18,4 @@
 @import './components/customer-reviews';
 @import './components/contacts';
 @import './components/footer';
+@import './components/contact-modal.scss';
