--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -75,7 +75,7 @@
 }
 
 .mobile-menu--is-open {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   display: block;
@@ -211,11 +211,7 @@
 .site-nav__link {
   padding: 12px 0;
 
-  color: var(--main-bgc);
-
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.3;
+  @include text(700, 14px, 1.3, 0, var(--main-bgc));
 
   &:active,
   &:hover,
