--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -34,12 +34,7 @@
       class="mobile-menu__switch mobile-menu__switch--open mobile-menu__open--js"
       aria-expanded
     >
-      <svg
-        class="mobile-menu__svg"
-        width="32"
-        height="32"
-        aria-label="Переключатель мобильного меню"
-      >
+      <svg class="mobile-menu__svg" width="32" height="32" aria-label="mobile menu switch">
         <use class="mobile-menu__icon-burger" href="./images/symbol-defs.svg#icon-burger"></use>
       </svg>
     </button>
@@ -77,7 +72,7 @@
         <nav class="site-nav">
           <ul class="site-nav__list">
             <li class="site-nav__item">
-              <a href="#" class="site-nav__link">Home </a>
+              <a href="/" class="site-nav__link">Home </a>
             </li>
             <li class="site-nav__item">
               <a href="#about-us" class="site-nav__link">About us </a>
