--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -32,7 +32,7 @@
     <button
       type="button"
       class="mobile-menu__switch mobile-menu__switch--open mobile-menu__open--js"
-      aria-expanded
+      aria-expanded="false"
     >
       <svg class="mobile-menu__svg" width="32" height="32" aria-label="mobile menu switch">
         <use class="mobile-menu__icon-burger" href="./images/symbol-defs.svg#icon-burger"></use>
