icons (each) title gallery

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,15 +2,15 @@
     <div class="container container__advantages">
         <h2 class="section__title section__title--is-hidden">Our advantages</h2>
         <ul class="advantages">
-            <li class="advantages__item">
+            <li class="advantages__item-icon1">
                 <span class="advantages__index">721</span>
                 <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
-            <li class="advantages__item">
+            <li class="advantages__item-icon2">
                 <span class="advantages__index">16kg</span>
                 <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
-            <li class="advantages__item">
+            <li class="advantages__item-icon3">
                 <span class="advantages__index">84</span>
                 <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
