--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,5 @@
 <section class="section">
+<h2 class="section__title--is-hidden">different types of ice-cream</h2>
     
 <picture class="gallery">
     <source srcset="./images/Gallery/gallery-desktop.jpg 1x, ./images/Gallery/gallery-desktop@2x.jpg 2x"
@@ -9,37 +10,5 @@
         media="(min-width: 480px)" />
 
     <img class="gallery__img" src="./images/Gallery/gallery-mobile.jpg" alt="different types of ice-cream" />
-
-  <div class="container">  
-    <div class="elements-gride" style="position: relative;">
-        <img class="element-item persent-size" src="./images/Gallery/gallery-1.jpg"
-            style="position: absolute; left: 0px; top: 170px;" />
-        <img class="element-item persent-size" src="./images/Gallery/gallery-2.jpg"
-            style="position: absolute; left: 147px; top: 100px;" />
-        <img class="element-item persent-size" src="./images/Gallery/gallery-3.jpg"
-            style="position: absolute; left: 147px; top: 240px;" />
-        <img class="element-item persent-size-1" src="./images/Gallery/gallery-4.jpg"
-            style="position: absolute; left: 294px; top: 0px;" />
-        <img class="element-item persent-size" src="./images/Gallery/gallery-5.jpg"
-            style="position: absolute; left: 294px; top: 290px;" />
-        <img class="element-item persent-size" src="./images/Gallery/gallery-6.jpg"
-            style="position: absolute; left: 590px; top: 100px;" />
-        <img class="element-item persent-size" src="./images/Gallery/gallery-7.jpg"
-            style="position: absolute; left: 590px; top: 250px;" />
-        <img class="element-item persent-size" src="./images/Gallery/gallery-8.jpg"
-            style="position: absolute; left: 740px; top: 60px;" />
-        <img class="element-item persent-size" src="./images/Gallery/gallery-9.jpg"
-            style="position: absolute; left: 740px; top: 205px;" />
-        <img class="element-item persent-size" src="./images/Gallery/gallery-10.jpg"
-            style="position: absolute; left: 900px; top: 170px;" />
-    </div>
-    </div>
+   </div>
 </section>
-jQuery(document).ready(function($) {
-$('.elements-gride').masonry({
-// options
-itemSelector: '.element-item',
-columnWidth: '.persent-size',
-percentPosition: true
-});
-});
