--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -8,7 +8,9 @@
     display: flex;
   }
 }
-.advantages__item {
+.advantages__item-icon1,
+.advantages__item-icon2,
+.advantages__item-icon3 {
   @media screen and (max-width: 767px) {
     &:not(:first-child) {
       margin-top: 38px;
@@ -30,7 +32,33 @@
     }
   }
 }
-.advantages__item:nth-child(1):before {
+
+$advantages__items: 'icon1', 'icon2', 'icon3';
+
+@each $iconName in $advantages__items {
+  .advantages__item-#{$iconName}:before {
+    content: '';
+    display: block;
+    width: 50px;
+    height: 50px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url('../images/Advantages/#{$iconName}.png');
+  }
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .advantages__item-#{$iconName}:before {
+      content: '';
+      display: block;
+      width: 50px;
+      height: 50px;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-image: url('../images/Advantages/#{$iconName}@2x.png');
+    }
+  }
+}
+
+/*.advantages__item:nth-child(1):before {
   content: '';
   display: block;
   width: 50px;
@@ -74,7 +102,7 @@
       background-image: url('../images/Advantages/advantages-icon3@2x.png');
     }
   }
-}
+}*/
 .advantages__index {
   font-family: Titan One;
   font-size: 36px;
