--- a/src/partials/contact-modal.html
+++ b/src/partials/contact-modal.html
@@ -9,7 +9,16 @@
 
     <!-- добавить адапитв рисунка -->
     <picture class="contact-modal__img">
-      <img src="./images/Hero/hero-girl-desktop.png" alt="girl with icecream" />
+      <source
+        srcset="./images/Hero/hero-girl-tablet.png 1x, ./images/Hero/hero-girl-tablet@2x.png 2x"
+        media="min-width: $tablet"
+      />
+      <source
+        srcset="./images/Hero/hero-girl-desktop.png 1x, ./images/Hero/hero-girl-desktop@2x.png 2x"
+        media="min-width: $desctop"
+      />
+
+      <img src="./images/Hero/hero-girl-tablet.png" alt="girl with icecream" />
     </picture>
 
     <div class="contact-modal__frame">
