--- a/src/partials/contact-modal.html
+++ b/src/partials/contact-modal.html
@@ -10,12 +10,12 @@
     <!-- добавить адапитв рисунка -->
     <picture class="contact-modal__img">
       <source
-        srcset="./images/Hero/hero-girl-tablet.png 1x, ./images/Hero/hero-girl-tablet@2x.png 2x"
-        media="min-width: $tablet"
+        srcset="./images/Hero/hero-girl-desktop.png 1x, ./images/Hero/hero-girl-desktop@2x.png 2x"
+        media="(min-width: 1280px)"
       />
       <source
-        srcset="./images/Hero/hero-girl-desktop.png 1x, ./images/Hero/hero-girl-desktop@2x.png 2x"
-        media="min-width: $desctop"
+        srcset="./images/Hero/hero-girl-tablet.png 1x, ./images/Hero/hero-girl-tablet@2x.png 2x"
+        media="(min-width: 768px)"
       />
 
       <img src="./images/Hero/hero-girl-tablet.png" alt="girl with icecream" />
