--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,20 +11,6 @@
       <a href="#" class="hero__button"> Products </a>
       <a href="#" class="hero__button hero__button--white"> How its made? </a>
     </div>
-    <picture class="animate__animated animate__jello animate__delay-1s">
-      <img
-        class="hero__ice-cream animate__animated animate__tada animate__delay-1s"
-        src="./images/Hero/hero-icecream-mobile.png"
-        srcset="./images/Hero/hero-icecream-mobile.png 1x, ./images/Hero/hero-icecream-mobile@2x.png 2x"
-        alt="icon ice-cream"
-      />
-      <img
-        class="hero__ice-cream--tab animate__animated animate__tada animate__delay-1s"
-        srcset="./images/Hero/hero-icecream-tablet.png 1x, ./images/Hero/hero-icecream-tablet@2x.png 2x"
-        src="/images/Hero/hero-icecream-tablet.png"
-        alt="icon ice-cream"
-=======
-    
     <picture>
       <source
         srcset="
@@ -32,7 +18,6 @@
           ./images/Hero/hero-icecream-desktop@2x.png 2x
         "
         media="(min-width:1280px)"
-        type="image/jpeg"
       />
       <source
         srcset="
@@ -40,41 +25,29 @@
           ./images/Hero/hero-icecream-tablet@2x.png 2x
         "
         media="(min-width:768px)"
-        type="image/jpeg"
->>>>>>> Stashed changes
       />
-      <img
-        class="hero__ice-cream--desc animate__animated animate__tada animate__delay-1s"
-        src="/images/Hero/hero-icecream-desktop.png"
+      <source
         srcset="
-        /images/Hero/hero-icecream-desktop.png         1x,
-          ./images/Hero/hero-icecream-desktop@2x.png 2x
+          ./images/Hero/hero-icecream-mobile.png    1x,
+          ./images/Hero/hero-icecream-mobile@2x.png 2x
         "
-<<<<<<< Updated upstream
-=======
         media="(min-width:320px)"
-        type="image/jpeg"
       />
       <img
         class="hero__ice-cream animate__animated animate__tada animate__delay-1s"
-        src="./images/Hero/hero-icecream-mobile.png"
->>>>>>> Stashed changes
+        src="./images/Hero/hero-icecream-tablet.png"
         alt="icon ice-cream"
       />
     </picture>
     <div class="hero__milk">
       <picture>
+        <source srcset="./images/Hero/hero-milk-desktop.png 1x, ./images/Hero/hero-milk-desktop@2x.png 2x" media="(min-width:1280px)">
+        <source srcset="./images/Hero/hero-milk-tablet.png 1x, ./images/Hero/hero-milk-tablet@2x.png 2x" media="(min-width:768px)">
         <img
           class="herro__icon-milk animate__animated animate__backInLeft animate__delay-2s"
           src="/images/Hero/hero-milk-tablet.png"
-          srcset="./images/Hero/hero-milk-tablet.png 1x, ./images/Hero/hero-milk-tablet@2x.png 2x"
+          
           alt="icon milk"
-        />
-        <img
-          class="herro__icon-milk--desc animate__animated animate__backInLeft animate__delay-2s"
-          src="/images/Hero/hero-milk-desktop.png"
-          alt="icon milk"
-          srcset="./images/Hero/hero-milk-desktop.png 1x, ./images/Hero/hero-milk-desktop@2x.png 2x"
         />
       </picture>
       <p class="herro__text-milk">
@@ -96,16 +69,12 @@
       </ul>
     </div>
     <picture>
+      <source srcset="./images/Hero/hero-girl-desktop.png 1x, ./images/Hero/hero-girl-desktop@2x.png 2x" media="(min-width:1280px)">
+      <source srcset="./images/Hero/hero-girl-tablet.png 1x, ./images/Hero/hero-girl-tablet@2x.png 2x" media="(min-width:768px)">
       <img
-        class="hero__tasty animate__animated animate__fadeInRight animate__delay-1s"
+        class="hero__tasty animate__animated animate__heartBeat animate__delay-1s"
         src="/images/Hero/hero-girl-tablet.png "
-        srcset="./images/Hero/hero-girl-tablet.png 1x, ./images/Hero/hero-girl-tablet@2x.png 2x"
-        alt="gerl with milk"
-      />
-      <img
-        class="hero__tasty--desc animate__animated animate__fadeInRight animate__delay-1s"
-        src="/images/Hero/hero-girl-desktop.png"
-        srcset="./images/Hero/hero-girl-desktop.png 1x, ./images/Hero/hero-girl-desktop@2x.png 2x"
+        
         alt="gerl with milk"
       />
     </picture>
