--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,5 +1,16 @@
 .hero {
   background-color: var(--brand-color);
+  @media screen and (max-width: $mobile-only) {
+    margin-bottom: 80px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 110px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 130px;
+  }
 }
 .hero__block {
   position: relative;
@@ -27,7 +38,7 @@
   color: var(--accent-color);
 
   font-size: 48px;
-  line-height: 55px;
+  line-height: 1.14;
   letter-spacing: 0.04em;
   text-transform: uppercase;
   margin-bottom: 19px;
@@ -36,10 +47,10 @@
   }
   @media screen and (min-width: $desktop) {
     font-size: 58px;
-    line-height: 66px;
-
+    line-height: 1.14;
+    padding-top: 171px;
     letter-spacing: 0.06em;
-    margin-bottom: 84px;
+    margin-bottom: 25px;
   }
 }
 .hero___titel--white {
@@ -47,7 +58,7 @@
   color: var(--main-bgc);
   text-transform: uppercase;
   font-size: 26px;
-  line-height: 30px;
+  line-height: 1.15;
   @media screen and (min-width: $desktop) {
     font-size: 38px;
     line-height: 44px;
@@ -59,34 +70,9 @@
   position: absolute;
   z-index: 0;
   bottom: 0;
-  right: 32px;
-  @media screen and (min-width: $tablet) {
-    display: none;
-  }
+  left: 50%;
 }
-.hero__ice-cream--tab {
-  display: none;
-  @media screen and (min-width: 768px) {
-    display: block;
-    position: absolute;
-    z-index: 0;
-    bottom: 0;
-    right: 33%;
-  }
-  @media screen and (min-width: $desktop) {
-    display: none;
-  }
-}
-.hero__ice-cream--desc {
-  display: none;
-  @media screen and (min-width: $desktop) {
-    display: block;
-    position: absolute;
-    z-index: 0;
-    bottom: 0;
-    right: 33%;
-  }
-}
+
 /*-------------btn--------------------*/
 .hero__button {
   padding: 8px 20px;
@@ -98,7 +84,7 @@
   border-radius: 50px;
   margin-bottom: 160px;
   font-size: 8px;
-  line-height: 10px;
+  line-height: 1.25;
 
   &:not(last-child) {
     margin-right: 10px;
@@ -111,7 +97,7 @@
   @media screen and (min-width: $desktop) {
     margin-bottom: 292px;
     font-size: 14px;
-    line-height: 18px;
+    line-height: 1.28;
     &:not(last-child) {
       margin-right: 17px;
     }
@@ -143,16 +129,8 @@
   }
 }
 .herro__icon-milk {
-  @media screen and (min-width: $desktop) {
-    display: none;
-  }
 }
-.herro__icon-milk--desc {
-  display: none;
-  @media screen and (min-width: $desktop) {
-    display: flex;
-  }
-}
+
 .herro__text-milk {
   position: relative;
   @media screen and (min-width: $tablet) {
@@ -197,6 +175,9 @@
     top: 96px;
     right: 44px;
   }
+  @media screen and (min-width: $desktop) {
+    top: 160px;
+  }
 }
 .hero__item {
   @media screen and (min-width: $tablet) {
@@ -222,20 +203,20 @@
   }
   @media screen and (min-width: $desktop) {
     font-size: 46px;
-    line-height: 53px;
+    line-height: 1.15;
     letter-spacing: 0.04em;
   }
 }
 .hero__cofes {
   @media screen and (min-width: $tablet) {
     font-size: 8px;
-    line-height: 10px;
+    line-height: 1.25;
     text-align: -webkit-center;
     color: var(--main-bgc);
   }
   @media screen and (min-width: $desktop) {
     font-size: 14px;
-    line-height: 18px;
+    line-height: 1.28;
   }
 }
 /*-------------gerl--------------------*/
@@ -247,17 +228,6 @@
     right: 34px;
     bottom: 0;
   }
-  @media screen and (min-width: $desktop) {
-    display: none;
-  }
+
 }
-.hero__tasty--desc {
-  display: none;
-  @media screen and (min-width: $desktop) {
-    display: block;
-    display: block;
-    position: absolute;
-    right: 34px;
-    bottom: 0;
-  }
-}
+
