--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -2,7 +2,7 @@
     <h2 class="section__title--is-hidden">different types of ice-cream</h2>
     <div class="gallery__container">
 <picture class="gallery">
-    <source srcset="./images/Gallery/gallery-desktop.png 1x, ./images/Gallery/gallery-desktop@2x.png 2x"
+    <source srcset="./images/Gallery/gallery-desktop.webp 1x, ./images/Gallery/gallery-desktop@2x.webp 2x"
         type="image/jpeg" media="(min-width: 1280px)" />
     <source srcset="./images/Gallery/gallery-tablet.png 1x, ./images/Gallery/gallery-tablet@2x.png 2x" type="image/jpeg"
         media="(min-width: 768px)" />
