Добавляет webp картинки

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -128,8 +128,8 @@
     // display: none;
   }
 }
-.herro__icon-milk {
-}
+// .herro__icon-milk {
+// }
 
 .herro__text-milk {
   position: relative;
