--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -3,12 +3,12 @@
     <div class="gallery__container">
 <picture class="gallery">
     <source srcset="./images/Gallery/gallery-desktop.webp 1x, ./images/Gallery/gallery-desktop@2x.webp 2x"
-        type="image/jpeg" media="(min-width: 1280px)" />
-    <source srcset="./images/Gallery/gallery-tablet.png 1x, ./images/Gallery/gallery-tablet@2x.png 2x" type="image/jpeg"
+        type="image/webp" media="(min-width: 1280px)" />
+    <source srcset="./images/Gallery/gallery-tablet.webp 1x, ./images/Gallery/gallery-tablet@2x.webp 2x" type="image/webp"
         media="(min-width: 768px)" />
-    <source srcset="./images/Gallery/gallery-mobile.png 1x, ./images/Gallery/gallery-mobile@2x.png 2x" type="image/jpeg"
+    <source srcset="./images/Gallery/gallery-mobile.png 1x, ./images/Gallery/gallery-mobile@2x.png 2x" type="image/png"
         media="(min-width: 480px)" />
-    <img class="gallery__img" src="./images/Gallery/gallery-tablet.png" alt="different types of ice-cream" />
+    <img class="gallery__img" src="./images/Gallery/gallery-mobile.png" alt="different types of ice-cream" />
   </div>
 </section>
 
