--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,22 +14,22 @@
     <picture>
       <source
         srcset="
-          ./images/Hero/hero-icecream-desktop.png     1x,
+          ./images/Hero/hero-icecream-desktop.webp    1x,
           ./images/Hero/hero-icecream-desktop@2x.webp 2x
         "
         media="(min-width:1280px)"
       />
       <source
         srcset="
-          ./images/Hero/hero-icecream-tablet.png    1x,
-          ./images/Hero/hero-icecream-tablet@2x.png 2x
+          ./images/Hero/hero-icecream-tablet.png     1x,
+          ./images/Hero/hero-icecream-tablet@2x.webp 2x
         "
         media="(min-width:768px)"
       />
       <source
         srcset="
-          ./images/Hero/hero-icecream-mobile.png    1x,
-          ./images/Hero/hero-icecream-mobile@2x.png 2x
+          ./images/Hero/hero-icecream-mobile.png     1x,
+          ./images/Hero/hero-icecream-mobile@2x.webp 2x
         "
         media="(min-width:320px)"
       />
