--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,18 +1,20 @@
 <section class="section section--pink-background">
-    <div class="container container__advantages">
-        <h2 class="section__title section__title--is-hidden">Our advantages</h2>
-        <ul class="advantages">
-            <li class="advantages__item-icon1">
-                <span class="advantages__index">721</span>
-                <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-            </li>
-            <li class="advantages__item-icon2">
-                <span class="advantages__index">16kg</span>
-                <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-            </li>
-            <li class="advantages__item-icon3">
-                <span class="advantages__index">84</span>
-                <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-            </li>
-        </ul>
-    </div>
+  <div class="container container__advantages">
+    <h2 class="section__title section__title--is-hidden" id="about-us">Our advantages</h2>
+
+    <ul class="advantages">
+      <li class="advantages__item-icon1">
+        <span class="advantages__index">721</span>
+        <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </li>
+      <li class="advantages__item-icon2">
+        <span class="advantages__index">16kg</span>
+        <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </li>
+      <li class="advantages__item-icon3">
+        <span class="advantages__index">84</span>
+        <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </li>
+    </ul>
+  </div>
+</section>
