--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -5,12 +5,12 @@
   background-position: right;
 
   @media screen and (min-width: $tablet) {
-    background-image: url(../images/Hero/ellipse-tab.png);
+    background-image: url(../images/Hero/Ellipse-tab.png);
     background-position: center right 35%;
   }
 
   @media screen and (min-width: $desktop) {
-    background-image: url(../images/Hero/ellipse.png);
+    background-image: url(../images/Hero/Ellipse.png);
     background-position: center right 35%;
   }
 
@@ -175,13 +175,13 @@
 .hero__item {
   @media screen and (min-width: $tablet) {
     margin-bottom: 14px;
-    background-image: url(../images/Hero/ellipse-white.png);
+    background-image: url(../images/Hero/Ellipse-white.png);
 
     background-repeat: no-repeat;
     background-position: right top;
   }
   @media screen and (min-width: $desktop) {
-    background-image: url(../images/Hero/elips-white--desc.png);
+    background-image: url(../images/Hero/ellips-white--desc.png);
   }
 }
 .hero__num {
