--- a/src/partials/contact-modal.html
+++ b/src/partials/contact-modal.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="contact-modal__button-box">
-      <a href="./" class="contact-modal__link">
+      <a href="../index.html" class="contact-modal__link">
         <button class="button button--white contact-modal__button">Home</button></a
       >
       <a href="#" class="contact-modal__link"
