--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -72,7 +72,7 @@
         <nav class="site-nav">
           <ul class="site-nav__list">
             <li class="site-nav__item">
-              <a href="/" class="site-nav__link">Home </a>
+              <a href="../index.html" class="site-nav__link">Home </a>
             </li>
             <li class="site-nav__item">
               <a href="#about-us" class="site-nav__link">About us </a>
