--- a/src/partials/contact-modal.html
+++ b/src/partials/contact-modal.html
@@ -22,10 +22,10 @@
     </picture>
 
     <div class="contact-modal__frame">
-      <iframe
+      <!-- <iframe
         src="https://www.google.com/maps/d/u/0/embed?mid=1GjoIbMz_y6WZ2c9CCroh4yJi62FcQs4F&ehbc=2E312F"
         class="contact-modal__map"
-      ></iframe>
+      ></iframe> -->
 
       <div class="modal-box">
         <ul class="modal-box__list">
