--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
 <section class="hero">
   <div class="hero__block container">
-    <h1 class="setion__titel animate__animated animate__backInLeft">
+    <h1 class="setion__titel animate__animated animate__backInLeft animate__delay-0.5s">
       <span class="hero___titel--white"
         >ice cream <br />
         made with</span
@@ -8,8 +8,8 @@
       PASSION
     </h1>
     <div class="hero__button-block">
-      <a href="#" class="hero__button"> Products </a>
-      <a href="#" class="hero__button hero__button--white"> How its made? </a>
+      <a href="#our-products" class="hero__button"> Products </a>
+      <a href="#how-it-made" class="hero__button hero__button--white"> How its made? </a>
     </div>
     <picture>
       <source
