--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,7 +18,7 @@
 <header class="header">
   <div class="container header__container">
     <!-- =========лого========== -->
-    <a class="logo" href="/">
+    <a class="logo" href="./">
       <img
         class="logo__image"
         srcset="./images/Header/ice-cream/logo.png 1x, ./images/Header/ice-cream/logo@2x.png 2x"
@@ -41,7 +41,7 @@
     <!-- кнопка перключатель мобильного меню открытие end -->
 
     <!-- ===кнопка купить для хедера=== -->
-    <button type="button" class="button button--white header__button">
+    <button type="button" class="button button--white header__button modal-buy--open">
       <span class="button__buy">Buy now </span>
     </button>
     <!-- кнопка купить для хедера end -->
