--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -18,19 +18,13 @@
   position: relative;
   // background-color: var(--brand-color);
 }
-.setion__titel {
-  font-family: Titan One;
+.hero__titel {
   position: relative;
   z-index: 25;
   display: flex;
   flex-direction: column;
   padding-top: 137px;
-  color: var(--accent-color);
-
-  font-size: 48px;
-  line-height: 1.14;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
+  text-align: left;
   margin-bottom: 19px;
   @media screen and (min-width: $tablet) {
     padding-top: 102px;
@@ -45,15 +39,8 @@
 }
 .hero___titel--white {
   font-weight: normal;
+  text-align: left;
   color: var(--main-bgc);
-  text-transform: uppercase;
-  font-size: 26px;
-  line-height: 1.15;
-  @media screen and (min-width: $desktop) {
-    font-size: 38px;
-    line-height: 44px;
-    letter-spacing: 0.04em;
-  }
 }
 /*-------------ice-cream icon--------------------*/
 .hero__ice-cream {
@@ -67,10 +54,8 @@
 .hero__button {
   width: 61.2px;
   height: 24px;
-  cursor: pointer;
-  border: none;
-  border-radius: 50px;
   margin-bottom: 160px;
+  border-radius: var(--button-border-radius);
   font-size: 8px;
   line-height: 1.25;
   margin-right: 10px;
@@ -79,6 +64,8 @@
   justify-content: center;
   background-color: var(--accent-color);
   color: var(--main-bgc);
+  transition: color 250ms linear;
+  transition: background-color 250ms linear;
   @media screen and (min-width: $tablet) {
     margin-bottom: 173px;
   }
@@ -92,6 +79,10 @@
       margin-right: 17px;
     }
   }
+  &:hover,
+  &:focus {
+    background-color: var(--hover-button-bgc);
+  }
 }
 .hero__button--white {
   width: 82.8px;
@@ -103,6 +94,10 @@
   @media screen and (min-width: $desktop) {
     width: 138px;
     height: 40px;
+  }
+  &:hover,
+  &:focus {
+    background-color: var(--light-button-bgc);
   }
 }
 .hero__button-block {
