--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -22,7 +22,17 @@
   
         <img src="./images/Hero/hero-girl-tablet.png" alt="girl with icecream" />
       </picture>
-  
+
+
+      <!-- кнопки home  -->
+      <div class="contact-modal__button-box">
+        <a href="./" class="contact-modal__link">
+          <button class="button button--white contact-modal__button">Home</button></a
+        >
+        <a href="#" class="contact-modal__link"
+          ><button class="button button--pink contact-modal__button">Franchise</button></a
+        >
+      </div>
       <!-- <div class="contact-modal__frame">
         <iframe
           src="https://www.google.com/maps/d/u/0/embed?mid=1GjoIbMz_y6WZ2c9CCroh4yJi62FcQs4F&ehbc=2E312F"
@@ -43,14 +53,7 @@
         </div> -->
       </div>
   
-      <!-- <div class="contact-modal__button-box">
-        <a href="./" class="contact-modal__link">
-          <button class="button button--white contact-modal__button">Home</button></a
-        >
-        <a href="#" class="contact-modal__link"
-          ><button class="button button--pink contact-modal__button">Franchise</button></a
-        >
-      </div> -->
+     
     </div>
   </div>
   
