--- a/src/sass/components/_modal-buy.scss
+++ b/src/sass/components/_modal-buy.scss
@@ -28,7 +28,7 @@
     width: 100%;
 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    min-height: 620px;
+    
     background-color: var(--light-section-bgc);
   
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -53,9 +53,11 @@
       // min-height: 1128px;
     }
   
-    .backdrop.is-hidden & {
-      transform: translate(-50%, -50%) scale(1.2);
-    }
+  }
+
+  
+  .backdrop.visually-hidden .modal-buy {
+    transform: translate(-50%, -50%) scale(1.2);
   }
   
   .modal-button__close {
