add one modal for two button
добавляет открытие-закрытие модал с разных кнопок;
антискролл под модал.

--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -1,6 +1,6 @@
-<div class="modal-buy__backdrop backdrop visually-hidden modal-buy__offer " >
+<div class="modal-buy__backdrop backdrop visually-hidden modal-buy__offer modal-buy-menu__offer" >
     <div class="modal-buy ">
-      <button class="modal-button__close modal-buy--close" >
+      <button class="modal-button__close modal-buy--close modal-buy-menu--close" >
         <svg class="modal-button__icon">
           <use href="./images/symbol-defs.svg#icon-close"></use>
         </svg>
@@ -24,15 +24,20 @@
       </picture>
 
 
-      <!-- кнопки home  -->
-      <div class="contact-modal__button-box">
+      <!--=========== кнопки home  Franchise============-->
+
+      <!-- <div class="contact-modal__button-box">
         <a href="./" class="contact-modal__link">
           <button class="button button--white contact-modal__button">Home</button></a
         >
         <a href="#" class="contact-modal__link"
           ><button class="button button--pink contact-modal__button">Franchise</button></a
         >
-      </div>
+      </div> -->
+
+<!--=========== кнопки home  Franchise   end ============-->
+
+
       <!-- <div class="contact-modal__frame">
         <iframe
           src="https://www.google.com/maps/d/u/0/embed?mid=1GjoIbMz_y6WZ2c9CCroh4yJi62FcQs4F&ehbc=2E312F"
@@ -54,6 +59,6 @@
       </div>
   
      
-    </div>
-  </div>
+    
+</div>
   
