--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -10,8 +10,8 @@
       PASSION
     </h1>
     <div class="hero__button-block">
-      <a href="#our-products" class="buttton hero__button"> Products </a>
-      <a href="#how-it-made" class="buttton hero__button hero__button--white"> How its made? </a>
+      <a href="#our-products" class="button hero__button"> Products </a>
+      <a href="#how-it-made" class="button hero__button hero__button--white"> How its made? </a>
     </div>
     <picture>
       <source
