--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -55,8 +55,10 @@
   width: 61.2px;
   height: 24px;
   margin-bottom: 160px;
+  padding: 0;
   border-radius: var(--button-border-radius);
   font-size: 8px;
+  font-weight: 400;
   line-height: 1.25;
   margin-right: 10px;
   display: flex;
@@ -75,7 +77,7 @@
     line-height: 1.28;
     width: 104px;
     height: 40px;
-    &:not(last-child) {
+    &:not(:last-child) {
       margin-right: 17px;
     }
   }
@@ -117,25 +119,26 @@
     align-items: center;
     justify-content: center;
     bottom: 28px;
+    left: 34px;
   }
   @media screen and (min-width: $desktop) {
-    // display: none;
+    left: 0px;
+bottom: 45px;
   }
 }
-// .herro__icon-milk {
-// }
+
 
 .herro__text-milk {
   position: relative;
   @media screen and (min-width: $tablet) {
     width: 114px;
     font-size: 8px;
-    line-height: 150%;
+    line-height: 1.5;
     color: var(--main-bgc);
   }
   @media screen and (min-width: $desktop) {
     font-size: 14px;
-    line-height: 140%;
+    line-height: 1.4;
     width: 200px;
     height: 78px;
   }
@@ -175,14 +178,17 @@
 }
 .hero__item {
   @media screen and (min-width: $tablet) {
-    margin-bottom: 14px;
+   
     background-image: url(../images/Hero/Ellipse-white.png);
 
     background-repeat: no-repeat;
-    background-position: right top;
+   background-position: right 15% top 0%;
   }
   @media screen and (min-width: $desktop) {
     background-image: url(../images/Hero/ellips-white--desc.png);
+  }
+  &:not(:last-child) {
+ margin-bottom: 14px;
   }
 }
 .hero__num {
